--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -229,6 +229,7 @@ body {
 .hls-video {
       width: 100%;
   border-radius: 15px;
+  height: auto;
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   margin-bottom: 30px;
