--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -220,7 +220,7 @@ body {
 /* مشغل الفيديو */
 .video-container {
   width: 100%;
-  height: 300px;
+  height: 600px;
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
@@ -230,7 +230,7 @@ body {
 .hls-video {
       width: 100%;
   border-radius: 15px;
-  height: 300px;
+  height: 600px;
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   margin-bottom: 30px;
@@ -239,8 +239,8 @@ body {
   }
 
 .live-stream {
-  width: 100%;
-  height: 500px;
+  width: auto;
+  height: auto;
   border: none;
 }
 
