--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -219,8 +219,8 @@ body {
 
 /* مشغل الفيديو */
 .video-container {
-  width: 100%;
-  height: 600px;
+  width: auto;
+  height: 450px;
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
@@ -228,9 +228,9 @@ body {
   background: #000;
 }
 .hls-video {
-      width: 100%;
+      width: auto;
   border-radius: 15px;
-  height: 600px;
+  height: 450px;
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   margin-bottom: 30px;
