--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -219,18 +219,18 @@ body {
 
 /* مشغل الفيديو */
 .video-container {
-  width: auto;
-  height: 450px;
+  width: 100%;
+  height: 550px;
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   margin-bottom: 30px;
   background: #000;
 }
-.hls-video {
-      width: auto;
+hls-video {
+   width:100%;
   border-radius: 15px;
-  height: 450px;
+  height: 550px;
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   margin-bottom: 30px;
