--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -61,7 +61,9 @@ body {
   font-weight: 700;
   color: var(--light-color);
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-  left: 50%;
+}
+h1 {
+  position: 50%;
 }
 
 .nav ul {
